# jarvis-base

./: .env.example  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
bot/: README.md  pyproject.toml  server.py
